[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "wyzant-poller"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "python-dotenv>=1.0",
    "twilio>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3.14", "responses>=0.25"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
wyzant-poller = "wyzant_poller.main:main"
